[gd_scene load_steps=3 format=3 uid="uid://dmikkeaaw1mp2"]

[ext_resource type="Script" path="res://ui/menu_command_center.gd" id="1_blosj"]
[ext_resource type="Theme" uid="uid://bcrd7oeovct3u" path="res://assets/styles/main_theme.tres" id="1_ik4og"]

[node name="CommandCenter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ik4og")
script = ExtResource("1_blosj")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.219608, 0.172549, 1)

[node name="ResearchPointsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 157.0
offset_bottom = 39.0
text = "RP: 0"

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Menu"]
layout_mode = 0
offset_left = -300.0
offset_top = -392.0
offset_right = 340.0
offset_bottom = -264.0
theme_override_font_sizes/font_size = 72
text = "Command Center"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectLevel" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -172.0
offset_top = -248.0
offset_right = 212.0
offset_bottom = -151.0
theme_override_font_sizes/font_size = 54
text = "Select Level"

[node name="Upgrades" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -172.0
offset_top = -120.0
offset_right = 212.0
offset_bottom = -23.0
theme_override_font_sizes/font_size = 54
text = "Upgrades"

[node name="MainMenu" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -172.0
offset_top = 8.0
offset_right = 212.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 54
text = "Main Menu"
